--- a/C0741277_week5/index.html
+++ b/C0741277_week5/index.html
@@ -8,5 +8,19 @@
 <body>
     <div>Content goes here!</div>
     <script src="js/main.js"></script>
+
+    <script>
+        var a = 5;
+        var b = 6;
+       // alert(a + b);
+    </script>
+    <script>
+        console.log(myFunction(a, b))
+        alert(myFunction(a, b))
+    </script>
+    <script>
+        arrays();
+    </script>
+
 </body>
 </html>
